--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.3",
