--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@observablehq/stdlib": "github:observablehq/stdlib",
     "d3": "^6.2.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
